2000-03-29  Ken Raeburn  <raeburn@gnu.org>

	* config.in (ENABLE_CHECKING): Undef.

	* lisp.h (struct interval): Replace "parent" field with a union of
	interval pointer and Lisp_Object; add new bitfield to use as
	discriminant.  Change other flag fields to bitfields.
	(CHECK): New macro for consistency checking.  If ENABLE_CHECKING
	is defined and the supplied test fails, print a message and
	abort.
	(eassert): New macro.  Use CHECK to provide an assert-like
	facility.

	* intervals.h (NULL_INTERVAL_P): Now applies only to real interval
	pointers; abort if the value looks like a lisp object.
	(NULL_INTERVAL_P, NULL_PARENT, HAS_PARENT, HAS_OBJECT, SET_PARENT,
	SET_OBJECT, INTERVAL_PARENT, GET_INTERVAL_OBJECT, COPY_PARENT):
	Modify for new interval parent definition.

	* alloc.c (mark_interval_tree, MARK_INTERVAL_TREE,
	UNMARK_BALANCE_INTERVALS): Update references that need an
	addressable lisp object in the interval structure.
	(die): New function.
	(suppress_checking): New variable.

	* intervals.c (interval_start_pos): Just return 0 if there's no
	parent object.

2000-03-29  Gerd Moellmann  <gerd@gnu.org>

	* lread.c (read1): Accept `.' (period) as symbol start like in CL
	and earlier Emacs versions.

	* keyboard.c (Ftop_level): Cancel busy-cursor.

	* eval.c (call_debugger): Cancel busy-cursor.

2000-03-29  Kenichi Handa  <handa@etl.go.jp>

	* search.c (Freplace_match): Adjust multibyteness of the current
	buffer and NEWTEXT.  Free allocated memory before signaling an
	error.

2000-03-28  Stefan Monnier  <monnier@cs.yale.edu>

	* regex.c (analyse_first): New function obtained by ripping out most
	of re_compile_fastmap and generalizing it a little bit so that it
	can also just return whether a given (sub)pattern can match the empty
	string or not.
	(regex_compile): Use `analyse_first' to decide whether the loop-check
	needs to be done or not for *, +, *? and +? (the loop check is costly
	for non-greedy repetition).